fix: 🐛 wrong color displayed when success

--- a/skinStyles/ooui/oojs-ui-core.less
+++ b/skinStyles/ooui/oojs-ui-core.less
@@ -314,7 +314,7 @@
 }
 
 .oo-ui-messageWidget.oo-ui-flaggedElement-success:not( .oo-ui-messageWidget-block ) {
-	color: var( --color-warning );
+	background-color: var( --background-color-success );
 }
 
 .oo-ui-iconWidget.oo-ui-widget-disabled {
